proyecto1vacas-master/proyecto1vacas-master/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDBIT
    CONCAT
    LLAVDER
    LLAVIZQ
    MAYORBIT
    MENORBIT
    MIENTRAS
    NUMERO
    ORBIT
    XOR
    XORBIT

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instruccion instrucciones_p
Rule 3     instrucciones_p -> instruccion instrucciones_p
Rule 4     instrucciones_p -> <empty>
Rule 5     instruccion -> imprimir_instr
Rule 6     instruccion -> asignacion_temp
Rule 7     instruccion -> asignacion_param
Rule 8     instruccion -> asignacion_val
Rule 9     instruccion -> asignacion_dir
Rule 10    instruccion -> asignacion_pila
Rule 11    instruccion -> asignacion_puntero
Rule 12    instruccion -> borrar_temp
Rule 13    instruccion -> if_instr
Rule 14    instruccion -> metodo
Rule 15    instruccion -> goto
Rule 16    instruccion -> exit
Rule 17    exit -> EXIT PTCOMA
Rule 18    metodo -> ID DOSPUNTOS
Rule 19    imprimir_instr -> IMPRIMIR PARIZQ expresiones PARDER PTCOMA
Rule 20    borrar_temp -> UNSET PARIZQ expresiones PARDER PTCOMA
Rule 21    asignacion_temp -> TEMP IGUAL expresiones PTCOMA
Rule 22    asignacion_param -> PARAM IGUAL expresiones PTCOMA
Rule 23    asignacion_val -> VAL IGUAL expresiones PTCOMA
Rule 24    asignacion_dir -> DIR IGUAL expresiones PTCOMA
Rule 25    asignacion_pila -> PILA IGUAL expresiones PTCOMA
Rule 26    asignacion_puntero -> PUNTERO IGUAL expresiones PTCOMA
Rule 27    asignacion_temp -> TEMP dimensiones IGUAL expresiones PTCOMA
Rule 28    asignacion_temp -> PILA dimensiones IGUAL expresiones PTCOMA
Rule 29    h -> TEMP dimensiones
Rule 30    h -> PILA dimensiones
Rule 31    dimensiones -> dimension dimensiones_p
Rule 32    dimensiones_p -> dimension dimensiones_p
Rule 33    dimensiones_p -> <empty>
Rule 34    dimension -> CORIZQ h CORDER
Rule 35    if_instr -> IF PARIZQ expresiones PARDER h
Rule 36    expresiones -> expresion expresiones_p
Rule 37    expresiones_p -> expresion expresiones_p
Rule 38    expresiones_p -> <empty>
Rule 39    expresion -> a
Rule 40    a -> b a_p
Rule 41    a_p -> OR b a_p
Rule 42    a_p -> <empty>
Rule 43    b -> c b_p
Rule 44    b_p -> AND c b_p
Rule 45    b_p -> <empty>
Rule 46    c -> e c_p
Rule 47    c_p -> IGUALQUE e c_p
Rule 48    c_p -> NIGUALQUE e c_p
Rule 49    c_p -> <empty>
Rule 50    e -> f e_p
Rule 51    e_p -> MENQUE f e_p
Rule 52    e_p -> MAYQUE f e_p
Rule 53    e_p -> MENIGUAL f e_p
Rule 54    e_p -> MAYIGUAL f e_p
Rule 55    e_p -> <empty>
Rule 56    f -> g f_p
Rule 57    f_p -> MAS g f_p
Rule 58    f_p -> MENOS g f_p
Rule 59    f_p -> <empty>
Rule 60    g -> h g_p
Rule 61    g_p -> POR h g_p
Rule 62    g_p -> DIVIDIDO h g_p
Rule 63    g_p -> RESIDUO h g_p
Rule 64    g_p -> <empty>
Rule 65    h -> NOT expresiones
Rule 66    h -> NOTBIT expresiones
Rule 67    h -> PARIZQ INT PARDER expresiones
Rule 68    h -> PARIZQ FLOAT PARDER expresiones
Rule 69    h -> PARIZQ CHAR PARDER expresiones
Rule 70    h -> MENOS expresiones
Rule 71    h -> ABS PARIZQ expresiones PARDER
Rule 72    h -> PARIZQ expresiones PARDER
Rule 73    goto -> h
Rule 74    h -> GOTO expresiones PTCOMA
Rule 75    h -> ENTERO
Rule 76    h -> DECIMAL
Rule 77    h -> TEMP
Rule 78    h -> ID
Rule 79    h -> PARAM
Rule 80    h -> VAL
Rule 81    h -> DIR
Rule 82    h -> PILA
Rule 83    h -> PUNTERO
Rule 84    h -> CADENA
Rule 85    h -> CARACTER
Rule 86    h -> ARRAY PARIZQ PARDER

Terminals, with rules where they appear

ABS                  : 71
AND                  : 44
ANDBIT               : 
ARRAY                : 86
CADENA               : 84
CARACTER             : 85
CHAR                 : 69
CONCAT               : 
CORDER               : 34
CORIZQ               : 34
DECIMAL              : 76
DIR                  : 24 81
DIVIDIDO             : 62
DOSPUNTOS            : 18
ENTERO               : 75
EXIT                 : 17
FLOAT                : 68
GOTO                 : 74
ID                   : 18 78
IF                   : 35
IGUAL                : 21 22 23 24 25 26 27 28
IGUALQUE             : 47
IMPRIMIR             : 19
INT                  : 67
LLAVDER              : 
LLAVIZQ              : 
MAS                  : 57
MAYIGUAL             : 54
MAYORBIT             : 
MAYQUE               : 52
MENIGUAL             : 53
MENORBIT             : 
MENOS                : 58 70
MENQUE               : 51
MIENTRAS             : 
NIGUALQUE            : 48
NOT                  : 65
NOTBIT               : 66
NUMERO               : 
OR                   : 41
ORBIT                : 
PARAM                : 22 79
PARDER               : 19 20 35 67 68 69 71 72 86
PARIZQ               : 19 20 35 67 68 69 71 72 86
PILA                 : 25 28 30 82
POR                  : 61
PTCOMA               : 17 19 20 21 22 23 24 25 26 27 28 74
PUNTERO              : 26 83
RESIDUO              : 63
TEMP                 : 21 27 29 77
UNSET                : 20
VAL                  : 23 80
XOR                  : 
XORBIT               : 
error                : 

Nonterminals, with rules where they appear

a                    : 39
a_p                  : 40 41
asignacion_dir       : 9
asignacion_param     : 7
asignacion_pila      : 10
asignacion_puntero   : 11
asignacion_temp      : 6
asignacion_val       : 8
b                    : 40 41
b_p                  : 43 44
borrar_temp          : 12
c                    : 43 44
c_p                  : 46 47 48
dimension            : 31 32
dimensiones          : 27 28 29 30
dimensiones_p        : 31 32
e                    : 46 47 48
e_p                  : 50 51 52 53 54
exit                 : 16
expresion            : 36 37
expresiones          : 19 20 21 22 23 24 25 26 27 28 35 65 66 67 68 69 70 71 72 74
expresiones_p        : 36 37
f                    : 50 51 52 53 54
f_p                  : 56 57 58
g                    : 56 57 58
g_p                  : 60 61 62 63
goto                 : 15
h                    : 34 35 60 61 62 63 73
if_instr             : 13
imprimir_instr       : 5
init                 : 0
instruccion          : 2 3
instrucciones        : 1
instrucciones_p      : 2 3
metodo               : 14

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instruccion instrucciones_p
    (5) instruccion -> . imprimir_instr
    (6) instruccion -> . asignacion_temp
    (7) instruccion -> . asignacion_param
    (8) instruccion -> . asignacion_val
    (9) instruccion -> . asignacion_dir
    (10) instruccion -> . asignacion_pila
    (11) instruccion -> . asignacion_puntero
    (12) instruccion -> . borrar_temp
    (13) instruccion -> . if_instr
    (14) instruccion -> . metodo
    (15) instruccion -> . goto
    (16) instruccion -> . exit
    (19) imprimir_instr -> . IMPRIMIR PARIZQ expresiones PARDER PTCOMA
    (21) asignacion_temp -> . TEMP IGUAL expresiones PTCOMA
    (27) asignacion_temp -> . TEMP dimensiones IGUAL expresiones PTCOMA
    (28) asignacion_temp -> . PILA dimensiones IGUAL expresiones PTCOMA
    (22) asignacion_param -> . PARAM IGUAL expresiones PTCOMA
    (23) asignacion_val -> . VAL IGUAL expresiones PTCOMA
    (24) asignacion_dir -> . DIR IGUAL expresiones PTCOMA
    (25) asignacion_pila -> . PILA IGUAL expresiones PTCOMA
    (26) asignacion_puntero -> . PUNTERO IGUAL expresiones PTCOMA
    (20) borrar_temp -> . UNSET PARIZQ expresiones PARDER PTCOMA
    (35) if_instr -> . IF PARIZQ expresiones PARDER h
    (18) metodo -> . ID DOSPUNTOS
    (73) goto -> . h
    (17) exit -> . EXIT PTCOMA
    (29) h -> . TEMP dimensiones
    (30) h -> . PILA dimensiones
    (65) h -> . NOT expresiones
    (66) h -> . NOTBIT expresiones
    (67) h -> . PARIZQ INT PARDER expresiones
    (68) h -> . PARIZQ FLOAT PARDER expresiones
    (69) h -> . PARIZQ CHAR PARDER expresiones
    (70) h -> . MENOS expresiones
    (71) h -> . ABS PARIZQ expresiones PARDER
    (72) h -> . PARIZQ expresiones PARDER
    (74) h -> . GOTO expresiones PTCOMA
    (75) h -> . ENTERO
    (76) h -> . DECIMAL
    (77) h -> . TEMP
    (78) h -> . ID
    (79) h -> . PARAM
    (80) h -> . VAL
    (81) h -> . DIR
    (82) h -> . PILA
    (83) h -> . PUNTERO
    (84) h -> . CADENA
    (85) h -> . CARACTER
    (86) h -> . ARRAY PARIZQ PARDER

    IMPRIMIR        shift and go to state 16
    TEMP            shift and go to state 18
    PILA            shift and go to state 19
    PARAM           shift and go to state 20
    VAL             shift and go to state 21
    DIR             shift and go to state 22
    PUNTERO         shift and go to state 23
    UNSET           shift and go to state 24
    IF              shift and go to state 25
    ID              shift and go to state 27
    EXIT            shift and go to state 28
    NOT             shift and go to state 29
    NOTBIT          shift and go to state 30
    PARIZQ          shift and go to state 17
    MENOS           shift and go to state 31
    ABS             shift and go to state 32
    GOTO            shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36
    CARACTER        shift and go to state 37
    ARRAY           shift and go to state 38

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    asignacion_temp                shift and go to state 5
    asignacion_param               shift and go to state 6
    asignacion_val                 shift and go to state 7
    asignacion_dir                 shift and go to state 8
    asignacion_pila                shift and go to state 9
    asignacion_puntero             shift and go to state 10
    borrar_temp                    shift and go to state 11
    if_instr                       shift and go to state 12
    metodo                         shift and go to state 13
    goto                           shift and go to state 14
    exit                           shift and go to state 15
    h                              shift and go to state 26

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .

    $end            reduce using rule 1 (init -> instrucciones .)


state 3

    (2) instrucciones -> instruccion . instrucciones_p
    (3) instrucciones_p -> . instruccion instrucciones_p
    (4) instrucciones_p -> .
    (5) instruccion -> . imprimir_instr
    (6) instruccion -> . asignacion_temp
    (7) instruccion -> . asignacion_param
    (8) instruccion -> . asignacion_val
    (9) instruccion -> . asignacion_dir
    (10) instruccion -> . asignacion_pila
    (11) instruccion -> . asignacion_puntero
    (12) instruccion -> . borrar_temp
    (13) instruccion -> . if_instr
    (14) instruccion -> . metodo
    (15) instruccion -> . goto
    (16) instruccion -> . exit
    (19) imprimir_instr -> . IMPRIMIR PARIZQ expresiones PARDER PTCOMA
    (21) asignacion_temp -> . TEMP IGUAL expresiones PTCOMA
    (27) asignacion_temp -> . TEMP dimensiones IGUAL expresiones PTCOMA
    (28) asignacion_temp -> . PILA dimensiones IGUAL expresiones PTCOMA
    (22) asignacion_param -> . PARAM IGUAL expresiones PTCOMA
    (23) asignacion_val -> . VAL IGUAL expresiones PTCOMA
    (24) asignacion_dir -> . DIR IGUAL expresiones PTCOMA
    (25) asignacion_pila -> . PILA IGUAL expresiones PTCOMA
    (26) asignacion_puntero -> . PUNTERO IGUAL expresiones PTCOMA
    (20) borrar_temp -> . UNSET PARIZQ expresiones PARDER PTCOMA
    (35) if_instr -> . IF PARIZQ expresiones PARDER h
    (18) metodo -> . ID DOSPUNTOS
    (73) goto -> . h
    (17) exit -> . EXIT PTCOMA
    (29) h -> . TEMP dimensiones
    (30) h -> . PILA dimensiones
    (65) h -> . NOT expresiones
    (66) h -> . NOTBIT expresiones
    (67) h -> . PARIZQ INT PARDER expresiones
    (68) h -> . PARIZQ FLOAT PARDER expresiones
    (69) h -> . PARIZQ CHAR PARDER expresiones
    (70) h -> . MENOS expresiones
    (71) h -> . ABS PARIZQ expresiones PARDER
    (72) h -> . PARIZQ expresiones PARDER
    (74) h -> . GOTO expresiones PTCOMA
    (75) h -> . ENTERO
    (76) h -> . DECIMAL
    (77) h -> . TEMP
    (78) h -> . ID
    (79) h -> . PARAM
    (80) h -> . VAL
    (81) h -> . DIR
    (82) h -> . PILA
    (83) h -> . PUNTERO
    (84) h -> . CADENA
    (85) h -> . CARACTER
    (86) h -> . ARRAY PARIZQ PARDER

    $end            reduce using rule 4 (instrucciones_p -> .)
    IMPRIMIR        shift and go to state 16
    TEMP            shift and go to state 18
    PILA            shift and go to state 19
    PARAM           shift and go to state 20
    VAL             shift and go to state 21
    DIR             shift and go to state 22
    PUNTERO         shift and go to state 23
    UNSET           shift and go to state 24
    IF              shift and go to state 25
    ID              shift and go to state 27
    EXIT            shift and go to state 28
    NOT             shift and go to state 29
    NOTBIT          shift and go to state 30
    PARIZQ          shift and go to state 17
    MENOS           shift and go to state 31
    ABS             shift and go to state 32
    GOTO            shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36
    CARACTER        shift and go to state 37
    ARRAY           shift and go to state 38

    instruccion                    shift and go to state 39
    instrucciones_p                shift and go to state 40
    imprimir_instr                 shift and go to state 4
    asignacion_temp                shift and go to state 5
    asignacion_param               shift and go to state 6
    asignacion_val                 shift and go to state 7
    asignacion_dir                 shift and go to state 8
    asignacion_pila                shift and go to state 9
    asignacion_puntero             shift and go to state 10
    borrar_temp                    shift and go to state 11
    if_instr                       shift and go to state 12
    metodo                         shift and go to state 13
    goto                           shift and go to state 14
    exit                           shift and go to state 15
    h                              shift and go to state 26

state 4

    (5) instruccion -> imprimir_instr .

    IMPRIMIR        reduce using rule 5 (instruccion -> imprimir_instr .)
    TEMP            reduce using rule 5 (instruccion -> imprimir_instr .)
    PILA            reduce using rule 5 (instruccion -> imprimir_instr .)
    PARAM           reduce using rule 5 (instruccion -> imprimir_instr .)
    VAL             reduce using rule 5 (instruccion -> imprimir_instr .)
    DIR             reduce using rule 5 (instruccion -> imprimir_instr .)
    PUNTERO         reduce using rule 5 (instruccion -> imprimir_instr .)
    UNSET           reduce using rule 5 (instruccion -> imprimir_instr .)
    IF              reduce using rule 5 (instruccion -> imprimir_instr .)
    ID              reduce using rule 5 (instruccion -> imprimir_instr .)
    EXIT            reduce using rule 5 (instruccion -> imprimir_instr .)
    NOT             reduce using rule 5 (instruccion -> imprimir_instr .)
    NOTBIT          reduce using rule 5 (instruccion -> imprimir_instr .)
    PARIZQ          reduce using rule 5 (instruccion -> imprimir_instr .)
    MENOS           reduce using rule 5 (instruccion -> imprimir_instr .)
    ABS             reduce using rule 5 (instruccion -> imprimir_instr .)
    GOTO            reduce using rule 5 (instruccion -> imprimir_instr .)
    ENTERO          reduce using rule 5 (instruccion -> imprimir_instr .)
    DECIMAL         reduce using rule 5 (instruccion -> imprimir_instr .)
    CADENA          reduce using rule 5 (instruccion -> imprimir_instr .)
    CARACTER        reduce using rule 5 (instruccion -> imprimir_instr .)
    ARRAY           reduce using rule 5 (instruccion -> imprimir_instr .)
    $end            reduce using rule 5 (instruccion -> imprimir_instr .)


state 5

    (6) instruccion -> asignacion_temp .

    IMPRIMIR        reduce using rule 6 (instruccion -> asignacion_temp .)
    TEMP            reduce using rule 6 (instruccion -> asignacion_temp .)
    PILA            reduce using rule 6 (instruccion -> asignacion_temp .)
    PARAM           reduce using rule 6 (instruccion -> asignacion_temp .)
    VAL             reduce using rule 6 (instruccion -> asignacion_temp .)
    DIR             reduce using rule 6 (instruccion -> asignacion_temp .)
    PUNTERO         reduce using rule 6 (instruccion -> asignacion_temp .)
    UNSET           reduce using rule 6 (instruccion -> asignacion_temp .)
    IF              reduce using rule 6 (instruccion -> asignacion_temp .)
    ID              reduce using rule 6 (instruccion -> asignacion_temp .)
    EXIT            reduce using rule 6 (instruccion -> asignacion_temp .)
    NOT             reduce using rule 6 (instruccion -> asignacion_temp .)
    NOTBIT          reduce using rule 6 (instruccion -> asignacion_temp .)
    PARIZQ          reduce using rule 6 (instruccion -> asignacion_temp .)
    MENOS           reduce using rule 6 (instruccion -> asignacion_temp .)
    ABS             reduce using rule 6 (instruccion -> asignacion_temp .)
    GOTO            reduce using rule 6 (instruccion -> asignacion_temp .)
    ENTERO          reduce using rule 6 (instruccion -> asignacion_temp .)
    DECIMAL         reduce using rule 6 (instruccion -> asignacion_temp .)
    CADENA          reduce using rule 6 (instruccion -> asignacion_temp .)
    CARACTER        reduce using rule 6 (instruccion -> asignacion_temp .)
    ARRAY           reduce using rule 6 (instruccion -> asignacion_temp .)
    $end            reduce using rule 6 (instruccion -> asignacion_temp .)


state 6

    (7) instruccion -> asignacion_param .

    IMPRIMIR        reduce using rule 7 (instruccion -> asignacion_param .)
    TEMP            reduce using rule 7 (instruccion -> asignacion_param .)
    PILA            reduce using rule 7 (instruccion -> asignacion_param .)
    PARAM           reduce using rule 7 (instruccion -> asignacion_param .)
    VAL             reduce using rule 7 (instruccion -> asignacion_param .)
    DIR             reduce using rule 7 (instruccion -> asignacion_param .)
    PUNTERO         reduce using rule 7 (instruccion -> asignacion_param .)
    UNSET           reduce using rule 7 (instruccion -> asignacion_param .)
    IF              reduce using rule 7 (instruccion -> asignacion_param .)
    ID              reduce using rule 7 (instruccion -> asignacion_param .)
    EXIT            reduce using rule 7 (instruccion -> asignacion_param .)
    NOT             reduce using rule 7 (instruccion -> asignacion_param .)
    NOTBIT          reduce using rule 7 (instruccion -> asignacion_param .)
    PARIZQ          reduce using rule 7 (instruccion -> asignacion_param .)
    MENOS           reduce using rule 7 (instruccion -> asignacion_param .)
    ABS             reduce using rule 7 (instruccion -> asignacion_param .)
    GOTO            reduce using rule 7 (instruccion -> asignacion_param .)
    ENTERO          reduce using rule 7 (instruccion -> asignacion_param .)
    DECIMAL         reduce using rule 7 (instruccion -> asignacion_param .)
    CADENA          reduce using rule 7 (instruccion -> asignacion_param .)
    CARACTER        reduce using rule 7 (instruccion -> asignacion_param .)
    ARRAY           reduce using rule 7 (instruccion -> asignacion_param .)
    $end            reduce using rule 7 (instruccion -> asignacion_param .)


state 7

    (8) instruccion -> asignacion_val .

    IMPRIMIR        reduce using rule 8 (instruccion -> asignacion_val .)
    TEMP            reduce using rule 8 (instruccion -> asignacion_val .)
    PILA            reduce using rule 8 (instruccion -> asignacion_val .)
    PARAM           reduce using rule 8 (instruccion -> asignacion_val .)
    VAL             reduce using rule 8 (instruccion -> asignacion_val .)
    DIR             reduce using rule 8 (instruccion -> asignacion_val .)
    PUNTERO         reduce using rule 8 (instruccion -> asignacion_val .)
    UNSET           reduce using rule 8 (instruccion -> asignacion_val .)
    IF              reduce using rule 8 (instruccion -> asignacion_val .)
    ID              reduce using rule 8 (instruccion -> asignacion_val .)
    EXIT            reduce using rule 8 (instruccion -> asignacion_val .)
    NOT             reduce using rule 8 (instruccion -> asignacion_val .)
    NOTBIT          reduce using rule 8 (instruccion -> asignacion_val .)
    PARIZQ          reduce using rule 8 (instruccion -> asignacion_val .)
    MENOS           reduce using rule 8 (instruccion -> asignacion_val .)
    ABS             reduce using rule 8 (instruccion -> asignacion_val .)
    GOTO            reduce using rule 8 (instruccion -> asignacion_val .)
    ENTERO          reduce using rule 8 (instruccion -> asignacion_val .)
    DECIMAL         reduce using rule 8 (instruccion -> asignacion_val .)
    CADENA          reduce using rule 8 (instruccion -> asignacion_val .)
    CARACTER        reduce using rule 8 (instruccion -> asignacion_val .)
    ARRAY           reduce using rule 8 (instruccion -> asignacion_val .)
    $end            reduce using rule 8 (instruccion -> asignacion_val .)


state 8

    (9) instruccion -> asignacion_dir .

    IMPRIMIR        reduce using rule 9 (instruccion -> asignacion_dir .)
    TEMP            reduce using rule 9 (instruccion -> asignacion_dir .)
    PILA            reduce using rule 9 (instruccion -> asignacion_dir .)
    PARAM           reduce using rule 9 (instruccion -> asignacion_dir .)
    VAL             reduce using rule 9 (instruccion -> asignacion_dir .)
    DIR             reduce using rule 9 (instruccion -> asignacion_dir .)
    PUNTERO         reduce using rule 9 (instruccion -> asignacion_dir .)
    UNSET           reduce using rule 9 (instruccion -> asignacion_dir .)
    IF              reduce using rule 9 (instruccion -> asignacion_dir .)
    ID              reduce using rule 9 (instruccion -> asignacion_dir .)
    EXIT            reduce using rule 9 (instruccion -> asignacion_dir .)
    NOT             reduce using rule 9 (instruccion -> asignacion_dir .)
    NOTBIT          reduce using rule 9 (instruccion -> asignacion_dir .)
    PARIZQ          reduce using rule 9 (instruccion -> asignacion_dir .)
    MENOS           reduce using rule 9 (instruccion -> asignacion_dir .)
    ABS             reduce using rule 9 (instruccion -> asignacion_dir .)
    GOTO            reduce using rule 9 (instruccion -> asignacion_dir .)
    ENTERO          reduce using rule 9 (instruccion -> asignacion_dir .)
    DECIMAL         reduce using rule 9 (instruccion -> asignacion_dir .)
    CADENA          reduce using rule 9 (instruccion -> asignacion_dir .)
    CARACTER        reduce using rule 9 (instruccion -> asignacion_dir .)
    ARRAY           reduce using rule 9 (instruccion -> asignacion_dir .)
    $end            reduce using rule 9 (instruccion -> asignacion_dir .)


state 9

    (10) instruccion -> asignacion_pila .

    IMPRIMIR        reduce using rule 10 (instruccion -> asignacion_pila .)
    TEMP            reduce using rule 10 (instruccion -> asignacion_pila .)
    PILA            reduce using rule 10 (instruccion -> asignacion_pila .)
    PARAM           reduce using rule 10 (instruccion -> asignacion_pila .)
    VAL             reduce using rule 10 (instruccion -> asignacion_pila .)
    DIR             reduce using rule 10 (instruccion -> asignacion_pila .)
    PUNTERO         reduce using rule 10 (instruccion -> asignacion_pila .)
    UNSET           reduce using rule 10 (instruccion -> asignacion_pila .)
    IF              reduce using rule 10 (instruccion -> asignacion_pila .)
    ID              reduce using rule 10 (instruccion -> asignacion_pila .)
    EXIT            reduce using rule 10 (instruccion -> asignacion_pila .)
    NOT             reduce using rule 10 (instruccion -> asignacion_pila .)
    NOTBIT          reduce using rule 10 (instruccion -> asignacion_pila .)
    PARIZQ          reduce using rule 10 (instruccion -> asignacion_pila .)
    MENOS           reduce using rule 10 (instruccion -> asignacion_pila .)
    ABS             reduce using rule 10 (instruccion -> asignacion_pila .)
    GOTO            reduce using rule 10 (instruccion -> asignacion_pila .)
    ENTERO          reduce using rule 10 (instruccion -> asignacion_pila .)
    DECIMAL         reduce using rule 10 (instruccion -> asignacion_pila .)
    CADENA          reduce using rule 10 (instruccion -> asignacion_pila .)
    CARACTER        reduce using rule 10 (instruccion -> asignacion_pila .)
    ARRAY           reduce using rule 10 (instruccion -> asignacion_pila .)
    $end            reduce using rule 10 (instruccion -> asignacion_pila .)


state 10

    (11) instruccion -> asignacion_puntero .

    IMPRIMIR        reduce using rule 11 (instruccion -> asignacion_puntero .)
    TEMP            reduce using rule 11 (instruccion -> asignacion_puntero .)
    PILA            reduce using rule 11 (instruccion -> asignacion_puntero .)
    PARAM           reduce using rule 11 (instruccion -> asignacion_puntero .)
    VAL             reduce using rule 11 (instruccion -> asignacion_puntero .)
    DIR             reduce using rule 11 (instruccion -> asignacion_puntero .)
    PUNTERO         reduce using rule 11 (instruccion -> asignacion_puntero .)
    UNSET           reduce using rule 11 (instruccion -> asignacion_puntero .)
    IF              reduce using rule 11 (instruccion -> asignacion_puntero .)
    ID              reduce using rule 11 (instruccion -> asignacion_puntero .)
    EXIT            reduce using rule 11 (instruccion -> asignacion_puntero .)
    NOT             reduce using rule 11 (instruccion -> asignacion_puntero .)
    NOTBIT          reduce using rule 11 (instruccion -> asignacion_puntero .)
    PARIZQ          reduce using rule 11 (instruccion -> asignacion_puntero .)
    MENOS           reduce using rule 11 (instruccion -> asignacion_puntero .)
    ABS             reduce using rule 11 (instruccion -> asignacion_puntero .)
    GOTO            reduce using rule 11 (instruccion -> asignacion_puntero .)
    ENTERO          reduce using rule 11 (instruccion -> asignacion_puntero .)
    DECIMAL         reduce using rule 11 (instruccion -> asignacion_puntero .)
    CADENA          reduce using rule 11 (instruccion -> asignacion_puntero .)
    CARACTER        reduce using rule 11 (instruccion -> asignacion_puntero .)
    ARRAY           reduce using rule 11 (instruccion -> asignacion_puntero .)
    $end            reduce using rule 11 (instruccion -> asignacion_puntero .)


state 11

    (12) instruccion -> borrar_temp .

    IMPRIMIR        reduce using rule 12 (instruccion -> borrar_temp .)
    TEMP            reduce using rule 12 (instruccion -> borrar_temp .)
    PILA            reduce using rule 12 (instruccion -> borrar_temp .)
    PARAM           reduce using rule 12 (instruccion -> borrar_temp .)
    VAL             reduce using rule 12 (instruccion -> borrar_temp .)
    DIR             reduce using rule 12 (instruccion -> borrar_temp .)
    PUNTERO         reduce using rule 12 (instruccion -> borrar_temp .)
    UNSET           reduce using rule 12 (instruccion -> borrar_temp .)
    IF              reduce using rule 12 (instruccion -> borrar_temp .)
    ID              reduce using rule 12 (instruccion -> borrar_temp .)
    EXIT            reduce using rule 12 (instruccion -> borrar_temp .)
    NOT             reduce using rule 12 (instruccion -> borrar_temp .)
    NOTBIT          reduce using rule 12 (instruccion -> borrar_temp .)
    PARIZQ          reduce using rule 12 (instruccion -> borrar_temp .)
    MENOS           reduce using rule 12 (instruccion -> borrar_temp .)
    ABS             reduce using rule 12 (instruccion -> borrar_temp .)
    GOTO            reduce using rule 12 (instruccion -> borrar_temp .)
    ENTERO          reduce using rule 12 (instruccion -> borrar_temp .)
    DECIMAL         reduce using rule 12 (instruccion -> borrar_temp .)
    CADENA          reduce using rule 12 (instruccion -> borrar_temp .)
    CARACTER        reduce using rule 12 (instruccion -> borrar_temp .)
    ARRAY           reduce using rule 12 (instruccion -> borrar_temp .)
    $end            reduce using rule 12 (instruccion -> borrar_temp .)


state 12

    (13) instruccion -> if_instr .

    IMPRIMIR        reduce using rule 13 (instruccion -> if_instr .)
    TEMP            reduce using rule 13 (instruccion -> if_instr .)
    PILA            reduce using rule 13 (instruccion -> if_instr .)
    PARAM           reduce using rule 13 (instruccion -> if_instr .)
    VAL             reduce using rule 13 (instruccion -> if_instr .)
    DIR             reduce using rule 13 (instruccion -> if_instr .)
    PUNTERO         reduce using rule 13 (instruccion -> if_instr .)
    UNSET           reduce using rule 13 (instruccion -> if_instr .)
    IF              reduce using rule 13 (instruccion -> if_instr .)
    ID              reduce using rule 13 (instruccion -> if_instr .)
    EXIT            reduce using rule 13 (instruccion -> if_instr .)
    NOT             reduce using rule 13 (instruccion -> if_instr .)
    NOTBIT          reduce using rule 13 (instruccion -> if_instr .)
    PARIZQ          reduce using rule 13 (instruccion -> if_instr .)
    MENOS           reduce using rule 13 (instruccion -> if_instr .)
    ABS             reduce using rule 13 (instruccion -> if_instr .)
    GOTO            reduce using rule 13 (instruccion -> if_instr .)
    ENTERO          reduce using rule 13 (instruccion -> if_instr .)
    DECIMAL         reduce using rule 13 (instruccion -> if_instr .)
    CADENA          reduce using rule 13 (instruccion -> if_instr .)
    CARACTER        reduce using rule 13 (instruccion -> if_instr .)
    ARRAY           reduce using rule 13 (instruccion -> if_instr .)
    $end            reduce using rule 13 (instruccion -> if_instr .)


state 13

    (14) instruccion -> metodo .

    IMPRIMIR        reduce using rule 14 (instruccion -> metodo .)
    TEMP            reduce using rule 14 (instruccion -> metodo .)
    PILA            reduce using rule 14 (instruccion -> metodo .)
    PARAM           reduce using rule 14 (instruccion -> metodo .)
    VAL             reduce using rule 14 (instruccion -> metodo .)
    DIR             reduce using rule 14 (instruccion -> metodo .)
    PUNTERO         reduce using rule 14 (instruccion -> metodo .)
    UNSET           reduce using rule 14 (instruccion -> metodo .)
    IF              reduce using rule 14 (instruccion -> metodo .)
    ID              reduce using rule 14 (instruccion -> metodo .)
    EXIT            reduce using rule 14 (instruccion -> metodo .)
    NOT             reduce using rule 14 (instruccion -> metodo .)
    NOTBIT          reduce using rule 14 (instruccion -> metodo .)
    PARIZQ          reduce using rule 14 (instruccion -> metodo .)
    MENOS           reduce using rule 14 (instruccion -> metodo .)
    ABS             reduce using rule 14 (instruccion -> metodo .)
    GOTO            reduce using rule 14 (instruccion -> metodo .)
    ENTERO          reduce using rule 14 (instruccion -> metodo .)
    DECIMAL         reduce using rule 14 (instruccion -> metodo .)
    CADENA          reduce using rule 14 (instruccion -> metodo .)
    CARACTER        reduce using rule 14 (instruccion -> metodo .)
    ARRAY           reduce using rule 14 (instruccion -> metodo .)
    $end            reduce using rule 14 (instruccion -> metodo .)


state 14

    (15) instruccion -> goto .

    IMPRIMIR        reduce using rule 15 (instruccion -> goto .)
    TEMP            reduce using rule 15 (instruccion -> goto .)
    PILA            reduce using rule 15 (instruccion -> goto .)
    PARAM           reduce using rule 15 (instruccion -> goto .)
    VAL             reduce using rule 15 (instruccion -> goto .)
    DIR             reduce using rule 15 (instruccion -> goto .)
    PUNTERO         reduce using rule 15 (instruccion -> goto .)
    UNSET           reduce using rule 15 (instruccion -> goto .)
    IF              reduce using rule 15 (instruccion -> goto .)
    ID              reduce using rule 15 (instruccion -> goto .)
    EXIT            reduce using rule 15 (instruccion -> goto .)
    NOT             reduce using rule 15 (instruccion -> goto .)
    NOTBIT          reduce using rule 15 (instruccion -> goto .)
    PARIZQ          reduce using rule 15 (instruccion -> goto .)
    MENOS           reduce using rule 15 (instruccion -> goto .)
    ABS             reduce using rule 15 (instruccion -> goto .)
    GOTO            reduce using rule 15 (instruccion -> goto .)
    ENTERO          reduce using rule 15 (instruccion -> goto .)
    DECIMAL         reduce using rule 15 (instruccion -> goto .)
    CADENA          reduce using rule 15 (instruccion -> goto .)
